Fixed bottom margin issue with floating images on small screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -456,6 +456,10 @@ footer {
     }
 }
 
+.richtext-image {
+    margin-bottom: 1rem;
+}
+
 /* 5. Social media */
 
 .social {
@@ -598,7 +602,6 @@ footer {
     .richtext-image {
         &.left,
         &.right {
-            margin-bottom: 1rem;
             max-width: 50%;
         }
 
